MOSIP-8064 : added test cases